# dcnodatg

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: deploy-static-pages.yml  publish-commits-to-pypi-test.yaml  publish-docs.yml  publish-release-to-pypi copy.yaml  publish-release-to-pypi.yaml  publish-testpypi.yaml  publish-testpypi.yaml.notused  publish.yaml
dcnodatg/: __init__.py  dcnod-cli.py  dcnodatg.py  eos_poller.py  eos_sanitizer.py  gns3_worker.py  workflow_semaphore
dcnodatg.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
docs/: README.rst  api.rst  conf.py  index.rst  requirements.txt
docs/_templates/autoapi/: index.rst  macros.rst
docs/_templates/autoapi/python/: module.rst
ptovnetlab/: arista_poller.py  arista_sanitizer.py  gns3_worker.py  ptov_netlab.py  ptovnetlab.py  ptovnetlab__cli.py  workflow_semaphore
src/dcnodatg/: __init__.py  dcnodatg_main.py  switchlist.txt
tests/: test_vdcnod.py
