[project]

dynamic = ["version"]
name = "dcnodatg"
description = "Data Center Network on Demand - Arista to GNS3"

authors = [
  {name = "Mencken Davidson", email = "mencken@gmail.com"},
]

maintainers = [
  {name = "Mencken Davidson", email = "mencken@gmail.com"}
]

#description = "Gets run-state details from a Arista switches and build a GNS3 virtual-lab to emulate them."

readme = "README.md"

license = {file = "LICENSE"}

keywords = ["arista", "eapi", "eos", "gns3", "lab", "virtual", "ceos"]

[project.urls]
Homepage = "https://menckend.github.io/dcnodatg"
Repository = "https://github.com/menckend/dcnodatg.git"
Issues = "https://github.com/menckend/dcnodatg/issues"
