[build-system]

requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
#version_scheme : str | Callable[[ScmVersion], str]



[project]
dynamic = ["version"]
name = "dcnodatg"
description = "Gets run-state details from a Arista switches and build a GNS3 virtual-lab to emulate them."
authors = [
  {name = "Mencken Davidson", email = "mencken@gmail.com"},
]
maintainers = [
  {name = "Mencken Davidson", email = "mencken@gmail.com"}
]
requires-python= ">=3.12"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["arista", "eapi", "eos", "gns3", "lab", "virtual", "ceos"]

[project.urls]
Homepage = "https://menckend.github.io/dcnodatg"
Repository = "https://github.com/menckend/dcnodatg.git"
Issues = "https://github.com/menckend/dcnodatg/issues"
